--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>giulinane</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="container">
+
+    </section>
+    <footer>
+        <p> Desenvolvido pelos alunos: rhianne e giuliana</p>
+    </footer>
 </body>
+
 </html>
