--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section id=""
-    <section class="container">
+    <section id="container">
 
     </section>
     <footer>
         <p> Desenvolvido pelos alunos: rhianne e giuliana</p>
     </footer>
+    <script src="main.js"></script>
+    <script src="perguntas.js"></script>
 </body>
 </html>
